vlib/v/parser/tests/inline_sum_type_return_type_too_many_variants.vv
import v.token

struct Foo {
	bar int | string | token.Pos | bool | u32
}

fn foo(arg int | string | token.Pos | bool | u32) int | string | token.Pos | bool | u32 {
	return 1
}
